2016-10-03  Tim Head  <betatim@gmail.com>

   * .travis.yml: adjust setup for exclusive use of travis (jenkins is retiring)

2016-10-02  Titus Brown  <titus@idyll.org>

   * khmer/{utils.py,thread_utils.py,trimming.py}: introduce new function,
   clean_input_reads, that does consistent read cleaning; update ReadBundle
   and trimming to make use of new cleaned_seq attribute.
   * scripts/{normalize-by-median.py,trim-low-abund.py}: refactor to use
   cleaned_seq attribute properly; this fixed a bug in normalize-by-median.py
   that led to ignoring lowercase 'actgn'.
   * doc/dev/development.rst: update developer documentation for new
   cleaned_seq attribute and ReadBundle behavior.
   * tests/test_script_output.py: update md5 signatures for output to reflect
   corrected behavior.
   * tests/test_functions.py: add test for broken_paired_iter uppercase
   behavior.
   * tests/test_read_handling.py: update tests for ReadBundle.

2016-10-01  Titus Brown  <titus@idyll.org>

   * khmer/trimming.py,scripts/{filter-abund-single.py,filter-abund.py,
   trim-low-abund.py}: extracted similar trimming code and refactored.
   * khmer/utils.py,tests/test_read_handling.py: change ReadBundle.trimmed_reads
   to trimmed_seqs; fix associated tests.
   * tests/test_functions.py: updated tests to use screed.Record instead of
   namedtuple classes.

2016-10-01  Titus Brown  <titus@idyll.org>

   * lib/hashtable.{cc,hh}: added assemble_linear_path function & helpers.
   * khmer/_khmer.cc: CPython API for assemble_linear_path.
   * tests/test_nodegraph.py: tests for new assemble_linear_path behavior.
   * khmer/khmer_args.py, tests/test_script_arguments.py: fix some lingering
   PEP 8 errors.
   * lib/kmer_hash.hh: added string -> string _revcomp function.

2016-09-30  Daniel Standage  <daniel.standage@gmail.com>

   * scripts/trim-low-abund.py, khmer/utils.py, doc/dev/development.rst: moved
   ReadBundle class to utils