@@ -958,18 +958,6 @@ void SubsetPartition::merge_from_disk(string other_filename)
         std::string err;
         err = "Unknown error reading header info from: " + other_filename;
         throw khmer_file_exception(err);
-    /* Yes, this is boneheaded. Unfortunately, there is a bug in gcc > 5
-     * regarding the basic_ios::failure that makes it impossible to catch
-     * with more specificty. So, we catch *all* exceptions after trying to
-     * get the ifstream::failure, and assume it must have been the buggy one.
-     * Unfortunately, this would also cause us to catch the
-     * khmer_file_exceptions thrown above, so we catch them again first and 
-     * rethrow them :) If this is understandably irritating to you, please
-     * bother the gcc devs at: 
-     *     https://gcc.gnu.org/bugzilla/show_bug.cgi?id=66145
-     *
-     * See also: http://media4.giphy.com/media/3o6UBpHgaXFDNAuttm/giphy.gif
-     */
     } catch (khmer_file_exception &e) {
         throw e;
     } catch (const std::exception &e) {
